# poetry2nix-withJupyter-demo

./: README.md  pyproject.toml  shell.nix
